# rust-vue-app

./: .gitignore  Cargo.toml  dev-watch.sh  package-lock.json  package.json
src/: app_context.rs  db.rs  macros.rs  main.rs  urls.rs  views.rs
src/app/: mod.rs  models.rs  urls.rs  views.rs
src/core/: mod.rs  models.rs  utils.rs  views.rs
src/survey/: mod.rs  models.rs  urls.rs  views.rs
static/: index.js  test.css  test.json
static/css/: base.css
static/js/: index.js
static/js/app/: index.js
static/js/comp/: music-player.js  user-form.js  users-list.js
templates/: about.html  base.html  index.html
templates/app/: index.html
