[package]
name = "rust_vue_app"
version = "0.1.0"
authors = ["eggmunkee <eggmunkee@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0.0"
actix-http = "1.0.1"
env_logger = "0.7.1"
sqlite = "0.25.0"
serde = "1.0.104"
serde_json = "1.0.48"
futures = "0.3.4"
bytes = "0.5.4"

[dependencies.tera]
version = "1.0.2"
default-features = false